# magnum.af

./: .clang-format  .dockerignore  .doxygen-config  .gitignore  .gitlab-ci.yml  .mailmap  CMakeLists.txt  Dockerfile  Dockerfile.cpu  Dockerfile.docu  Dockerfile.opencl  README.md  debug_tips.txt
boostpython/: CMakeLists.txt
boostpython/src/: __init__.py  bindings.cpp  greet.py
docu/: CMakeLists.txt  magnumaf_example_list.hpp  python_example_list.py
docu/images/: plot_sp4.gpi
examples/: CMakeLists.txt  README.md  atomistic_skyrmion_blochpoint_annihilation.cpp  boost_odeint_with_afarray.cpp  convert_vti_to_ascii.cpp  demag_pbc_timing.cpp  dmi_1d.cpp  initializing_fieldterms.cpp  lookup_table.cpp  magnumafcpp_info.cpp  parse_args.cpp  rkky.cpp  sp4.cpp  sp4_boost_odeint_testing.cpp  sp4_rk4_testing_nostate.cpp  sp4_rkf45_testing_nostate.cpp  test_temp.cpp  test_vti_write_mem_increase.cpp  vortex_hysteresis_minimizer.cpp  vti_write_check_mem_usage.cpp
examples/angle_error_permanent_magnet/: angle_error_permanent_magnet.cpp  plot.gpi  run.sh
examples/decoupling_demos/: sp4_boost_odeint_minimal.cpp  sp4_boost_odeint_minimal_type_erasure.cpp  sp4_boost_odeint_minimal_variant.cpp  sp4_boost_odeint_testing.cpp  sp4_rk4_testing_nostate.cpp  sp4_rkf45_testing_nostate.cpp
examples/saf_angle_error/: get_table_and_plot.sh  plot.gpi  plot_ref_layer_over_files.gpi  plot_table_heatmap.gpi  run.sh  saf_angle_error.cpp  saf_ref_layer_hysteresis.cpp
examples/timings/: time_member_init_list_afarray.cpp
magnumaf/: .clang-format  .clang-tidy  CMakeLists.txt
magnumaf/CMakeModules/: git_watcher.cmake
magnumaf/examples/: CMakeLists.txt  README.md  atomistic_skyrmion_blochpoint_annihilation.cpp  boost_odeint_with_afarray.cpp  convert_vti_to_ascii.cpp  demag_pbc_timing.cpp  dmi_1d.cpp  initializing_fieldterms.cpp  lookup_table.cpp  magnumafcpp_info.cpp  parse_args.cpp  rkky.cpp  sp4.cpp  vortex_hysteresis_minimizer.cpp  vti_write_check_mem_usage.cpp
magnumaf/src/: .vimrc  CMakeLists.txt  math.cpp  state.cpp
magnumaf/test/: CMakeLists.txt  README.md  adaptive_runge_kutta.cpp  cubic_anisotropy_field.cpp  exchange_field.cpp  full_inner_product.cpp  functions.cpp  math.cpp  mesh.cpp  micro_demag.cpp  micro_demag_pbc.cpp  micro_exch_nonequi.cpp  micro_exch_pbc.cpp  micro_exch_rkky.cpp  micro_exch_sparse.cpp  micro_zhang_li.cpp  nonequi_demag.cpp  nonequi_demag_layers.cpp  nonequi_external_field.cpp  nonequi_term_base.cpp  rkky.cpp  state.cpp
python/: CMakeLists.txt  magnumaf.pyx  magnumaf_decl.pxd  magnumafpy.pyx  magnumafpy_decl.pxd
python/CMakeModules/: UseCython.cmake
python/examples/: NdFeB_ellipse.py  dmi_stringmethod.py  domain_wall_pinning.py  ellipse_rkky_hys.py  ellipse_rkky_hys_var_Ms.py  loop_external_field.py  regions.py  rkky.py  rkky_compare_to_analytical.py  rkky_compare_to_analytical_pinned.py  saf_only.py  skyrmion_multilayer.py  skyrmion_stringmethod.py  sp4.py  sp4_extended_demo.py  sp_dmi_d2d.py  sp_domain_wall_pinning_magnumaf.py  stochastic_particle.py  vortex_saf.py  zoo.py
python/test/: atomistic_dmi.py  constants.py  cubic_anisotropy_field.py  functions.py  run_all_integration_tests.sh  run_all_unit_tests.sh  state.py  test_atomistic_anisotropy.py  test_atomistic_dipole_dipole.py  test_atomistic_dmi.py  test_atomistic_exchange.py  test_constants.py  test_cubic_anisotropy_field.py  test_external_field.py  test_functions.py  test_mesh.py  test_micro_anisotropy.py  test_micro_bulk_dmi_exchange_field.py  test_micro_demag.py  test_micro_demag_pbc.py  test_micro_exchange_pbc.py  test_sp4.py  test_state.py
python_interface/src/: CMakeLists.txt
scripts/single_script_build/: CMakeLists.txt  magnum_af.hpp  main_empty.cpp
src/: .vimrc  CMakeLists.txt  Faddeeva.cpp  LLGTerm.hpp  __init__.py  anisotropy.cpp  anisotropy.hpp  ascii_io.cpp  atomistic_anisotropy.cpp  atomistic_anisotropy.hpp  atomistic_demag.cpp  atomistic_demag.hpp  atomistic_dmi.cpp  atomistic_dmi.hpp  atomistic_exchange.cpp  atomistic_exchange.hpp  bindings.cpp  constants.hpp  controller.hpp  demag.cpp  demag.hpp  dmi.cpp  dmi.hpp  exch.cpp  exch.hpp  func.cpp  func.hpp  integrator.cpp  integrator.hpp  integrators.cpp  integrators.hpp  llg.cpp  llg.hpp  magnum_af.hpp  magnum_af.pyx  magnum_af_decl.pxd  magnumaf.pyx  magnumaf_decl.pxd  main_atom_phasespace.cpp  main_singlelayer_phasespace.cpp  (+41 more)
src/field_terms/: atomistic_anisotropy.cpp  atomistic_exchange.cpp  atomistic_external_field.cpp  external_field.cpp  micro_demag.cpp  micro_dmi.cpp  micro_exch.cpp  micro_exch_nonequi.cpp  micro_exch_rkky.cpp  micro_exch_sparse.cpp
src/integrators/: adaptive_runge_kutta.cpp  adaptive_runge_kutta.hpp  controller.cpp  controller.hpp  integrator.hpp  llg.cpp  llg.hpp  llg_integrator.cpp  new_llg.cpp  new_llg.hpp  stochastic_integrator.cpp  stochastic_integrator.hpp  stochastic_llg.cpp  stochastic_llg.hpp
src/llg_terms/: LLGTerm.hpp  atomistic_anisotropy.cpp  atomistic_anisotropy.hpp  atomistic_demag.cpp  atomistic_demag.hpp  atomistic_dmi.cpp  atomistic_dmi.hpp  atomistic_exchange.cpp  atomistic_exchange.hpp  atomistic_external_field.cpp  atomistic_external_field.hpp  cubic_anisotropy_field.cpp  micro_anisotropy.cpp  micro_anisotropy.hpp  micro_anisotropy_nonequi.cpp  micro_anisotropy_nonequi.hpp  micro_dampinglike.cpp  micro_dampinglike.hpp  micro_demag.cpp  micro_demag.hpp  micro_demag_nonequi.cpp  micro_demag_nonequi.hpp  micro_demag_pthread.cpp  micro_demag_pthread.hpp  micro_dmi.cpp  micro_dmi.hpp  micro_exch.cpp  micro_exch.hpp  micro_exch_nonequi.cpp  micro_exch_nonequi.hpp  micro_exch_rkky.cpp  micro_exch_rkky.hpp  micro_exch_sparse.cpp  micro_exch_sparse.hpp  micro_exch_sparse_nobc.cpp  micro_exch_sparse_nobc.hpp  micro_fieldlike.cpp  micro_fieldlike.hpp  micro_nonequi_demag.cpp  micro_nonequi_demag.hpp  (+4 more)
src/solvers/: cg_minimizer.cpp  cg_minimizer.hpp  lbfgs_minimizer.cpp  lbfgs_minimizer.hpp  minimizer.cpp  minimizer.hpp  string_method.cpp
src/util/: ascii_io.cpp  cache_manager.cpp  func.cpp  gradient_decent.cpp  gradient_decent.hpp  named_type.hpp  newton_iteration.hpp  pgfplot.cpp  timer.hpp  (+6 more)
(+952 files in other folders)
