#cmake_minimum_required(VERSION 3.10.1)
#project(pyMyLib)

FIND_PACKAGE(PythonInterp 3)

if (PYTHONINTERP_FOUND)
  if (UNIX AND NOT APPLE)
    if (PYTHON_VERSION_MAJOR EQUAL 3)
        #message("${PYTHON_VERSION_SUFFIX}")
        #message("${PYTHON_VERSION_MAJOR}")
        #message("${PYTHON_VERSION_MINOR}")
        FIND_PACKAGE(Boost COMPONENTS python${PYTHON_VERSION_MAJOR})
        FIND_PACKAGE(PythonInterp 3)
        FIND_PACKAGE(PythonLibs 3 REQUIRED)
    else()
        FIND_PACKAGE(Boost COMPONENTS python)
        FIND_PACKAGE(PythonInterp)
        FIND_PACKAGE(PythonLibs REQUIRED)
    endif()
  else()
    if (PYTHON_VERSION_MAJOR EQUAL 3)
        FIND_PACKAGE(Boost COMPONENTS python${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR})
        FIND_PACKAGE(PythonInterp 3)
        FIND_PACKAGE(PythonLibs 3 REQUIRED)
    else()
        FIND_PACKAGE(Boost COMPONENTS python${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR})
        FIND_PACKAGE(PythonInterp)
        FIND_PACKAGE(PythonLibs REQUIRED)
    endif()
  endif()
else()
    message("Python not found")
endif()

message(STATUS "PYTHON_LIBRARIES = ${PYTHON_LIBRARIES}")
message(STATUS "PYTHON_EXECUTABLE = ${PYTHON_EXECUTABLE}")
message(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
message(STATUS "Boost_LIBRARIES = ${Boost_LIBRARIES}")

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
FIND_PACKAGE(ArrayFire REQUIRED)
INCLUDE_DIRECTORIES(${ArrayFire_INCLUDE_DIRS})
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})
#message("VTK_USE_FILE=${VTK_USE_FILE}")
include_directories(${PROJECT_SOURCE_DIR}/include)

configure_file(src/greet.py ${CMAKE_CURRENT_BINARY_DIR}/src/greet.py COPYONLY)
configure_file(src/__init__.py ${CMAKE_CURRENT_BINARY_DIR}/src/__init__.py COPYONLY)

add_library(PYBINDTESTLIB SHARED src/bindings.cpp $<TARGET_OBJECTS:magnum.af_CORE_OBJECT> )
# NOTE: when add_library is called with all target objects, we must link Arrayfire AND VTK libraries, otherwise we segfault:
target_link_libraries(PYBINDTESTLIB ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${ArrayFire_CPU_LIBRARIES} ${VTK_LIBRARIES})


# Suppress prefix "lib" because Python does not allow this prefix
set_target_properties(PYBINDTESTLIB PROPERTIES PREFIX "")

include(GNUInstallDirs)
message("PYTHON_INSTALL_PATH = ${PYTHON_INSTALL_PATH}")
message("{CMAKE_INSTALL_LIBDIR} = ${CMAKE_INSTALL_LIBDIR}")
install(TARGETS PYBINDTESTLIB DESTINATION ${CMAKE_INSTALL_LIBDIR})
#TODO __init__.py not found#install(TARGETS PYBINDTESTLIB "${PROJECT_SOURCE_DIR}/src/__init__.py" DESTINATION "${PYTHON_INSTALL_PATH}")
#install(TARGETS PYBINDTESTLIB ${PROJECT_SOURCE_DIR}/src/__init__.py DESTINATION ${CMAKE_INSTALL_LIBDIR})
